--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,3 +14,7 @@ $light-gray: #F4F4F4;
 $primary-grey: #8A8A8A;
 $darker-grey: #4B4B4B;
 $lighter-grey: #9C9C9C;
+
+.primary-grey {
+  color: #8A8A8A !important;
+}
