--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,11 +1,17 @@
 // BUTTONS
 
 .primary-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: fit-content;
+  text-align: center;
   background: $primary-grey;
   color: white;
   padding: 10px 20px;
   letter-spacing: 3px;
-  font-size: 16px;
+  font-size: 14px;
   transition: all 0.3s ease;
   &:hover {
     background: #717171;
@@ -15,11 +21,18 @@
 }
 
 .secondary-button {
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: fit-content;
+  text-align: center;
   color: $primary-grey;
   border: 2px solid $primary-grey;
   padding: 10px 20px;
   letter-spacing: 3px;
-  font-size: 16px;
+  font-size: 14px;
   transition: all 0.3s ease;
   &:hover {
     background: $primary-grey;
@@ -29,6 +42,12 @@
 }
 
 .shop-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: fit-content;
+  text-align: center;
   box-shadow: 0 10px 40px 0 $primary-grey;
   background: $primary-grey;
   color: white;
