--- a/app/assets/stylesheets/shirts/_show.scss
+++ b/app/assets/stylesheets/shirts/_show.scss
@@ -1,6 +1,17 @@
 .shirt-container {
   display: flex;
-  margin: 0 12%;
+  margin: 0 8%;
+  @include for-medium-devices-down {
+    margin: 0 5%;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  @include for-medium-devices-down {
+    margin: 0 3%;
+  }
+  @include for-phone-only {
+    margin: 0 1%;
+  }
 }
 
 // .shirt-carousel {
@@ -11,9 +22,20 @@
 }
 
 .shirt-show-title {
-  font-size: 40px;
   letter-spacing: 1px;
   margin-bottom: 30px;
+  @include for-large-devices-down {
+    font-size: 30px;
+  }
+  @include for-medium-devices-down {
+    text-align: center;
+  }
+  @include for-small-devices-down {
+    font-size: 24px;
+  }
+  @include for-phone-only {
+    font-size: 18px;
+  }
 }
 
 .show-page-product-price {
@@ -21,10 +43,17 @@
   letter-spacing: 2px;
   font-weight: bold;
   margin: 0;
+  @include for-medium-devices-down {
+    margin-bottom: 30px;
+  }
 }
 
 .buy-button-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @include for-medium-devices-down {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
