--- a/app/views/shirts/index.html.erb
+++ b/app/views/shirts/index.html.erb
@@ -2,7 +2,7 @@
   <div class="shirt-index-banner-content">
     <h1 class="shirt-index-banner-title">Shirts Made From the Finest Fabrics</h1>
     <div class="shirt-index-banner-button">
-      <%= link_to 'HOW IT WORKS', '#', class: "secondary-button button-white" %>
+      <%= link_to 'HOW IT WORKS', how_it_works_path, class: "secondary-button button-white" %>
     </div>
   </div>
 </div>
