--- a/app/assets/stylesheets/shirts/_shirts_index.scss
+++ b/app/assets/stylesheets/shirts/_shirts_index.scss
@@ -27,9 +27,13 @@
 
 .shirt-index-category-tabs {
   display: flex;
-  height: 45px;
+  height: 60px;
   width: 100%;
   overflow: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
 }
 
 .shirt-index-tab {
